--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     </head>
     <body>
         <h1>Nazaye Tilley's CSCE 190 Site</h1>
+
+        <section class="assignment">
+            <a href="Problem Statement.pdf"><img src="Problem Statement.png"></a>
+            <section class="ass-details">
+                <a href="images/Problem Statement.pdf"><h2>Problem Statement</h2></a>
+                <p>
+                    Many students on campus want their food delivered to their dorm room, and allowing delivery can make student’s lives so much easier and can help eliminate those long lunch lines.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
