--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <body>
         <h1>Nazaye Tilley's CSCE 190 Site</h1>
 
+        <!-- Problem Statement Assignment-->
         <section class="assignment">
             <a href="Problem Statement.pdf"><img src="Problem Statement.png"></a>
             <section class="ass-details">
                 <a href="images/Problem Statement.pdf"><h2>Problem Statement</h2></a>
                 <p>
                     Many students on campus want their food delivered to their dorm room, and allowing delivery can make student’s lives so much easier and can help eliminate those long lunch lines.
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="affinity-diagram.pdf"><img src="affinity-diagram.jpeg"></a>
+            <section class="ass-details">
+                <a href="affinity-diagram.pdf"><h2>Affinity Diagram</h2></a>
+                <p>
+                    My group and I worked together  to brainstorm different ideas pertaining to on-campus food delivery.
                 </p>
             </section>
         </section>
