--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
                 </p>
             </section>
         </section>
+
+         <!-- Personna assignment Assignment-->
+         <section class="assignment">
+            <a href="personna assignment.pdf"><img src="Persona 1.png"></a>
+            <section class="ass-details">
+                <a href="personna assignment.pdf"><h2>Personnas: 3 Personnas for on-campus food delivery</h2></a>
+                <p>
+                    A personna of a typical on-campus food delivery user.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
