--- a/index.html
+++ b/index.html
@@ -39,5 +39,16 @@
                 </p>
             </section>
         </section>
+
+        <!-- Storyboard Assignment-->
+        <section class="assignment">
+            <a href="Group Storyboards.pdf"><img src="Nazaye's storyboard.png"></a>
+            <section class="ass-details">
+                <a href="Group Storyboards.pdf"><h2>Storyboard: Abrahim Brown</h2></a>
+                <p>
+                    A comic strip illustrating the need for a on-campus delivery app.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
